--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,14 +14,18 @@
     {% endif %}
 </div>
 <div class="post-tabs">
-
     {% include '_posts.html' %}
 </div>
 {% if pagination %}
 <div class="pagination">
     {{ macros.pagination_widget(pagination, '.index') }}
 </div>
+
 {% endif %}
 {% endblock %}
 
+{% block scripts %}
+{{ super() }}
+{{ pagedown.include_pagedown() }}
+{% endblock %}
 
