--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -16,6 +16,20 @@
                     {{ post.body }}
                 {% endif %}
             </div>
+            <div class="post-footer">
+                {% if current_user == post.author %}
+                <a href="{{ url_for('.edit', id=post.id) }}">
+                    <span class="label label-primary">编辑</span>
+                </a>
+                {% elif current_user.is_administrator() %}
+                <a href="{{ url_for('.edit', id=post.id) }}">
+                    <span class="label label-danger">Edit [Admin]</span>
+                </a>
+                {% endif %}
+                 <a href="{{ url_for('.post', id=post.id) }}">
+                    <span class="label label-default">全文</span>
+                </a>
+            </div>
         </div>
     </li>
     {% endfor %}
