--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -23,7 +23,7 @@
                 </a>
                 {% elif current_user.is_administrator() %}
                 <a href="{{ url_for('.edit', id=post.id) }}">
-                    <span class="label label-danger">Edit [Admin]</span>
+                    <span class="label label-danger">编辑【管理员】</span>
                 </a>
                 {% endif %}
                  <a href="{{ url_for('.post', id=post.id) }}">
